# caracteres

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.sh
